fixed bug with group networks in py2app version

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-snafu_demo_video.mov
 dist/
 py/build/
 py/dist/
-py/rw
 node_modules/nwjs-builder-phoenix/
-bfg.jar
-snet/dedyne.snet
 py/.eggs/
 error.log
 .*.swp
+py/rw
+snet
+spellfiles
+schemes
