--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dist": "build --tasks mac-x64 --mirror https://dl.nwjs.io/ ."
   },
-  "description": "GUI for semnet package (though much less extensive). This is the development version, it does not include `nwjs` required to run,  nor does it include `semnet` binaries (you must download the `semnet` package separately and place the `rw` folder in `/py`).  Actually that sounds complicated, why don't you just use the web version at http://alab.psych.wisc.edu/snafu? Or if you really want the desktop version, e-mail me at zemla at wisc dot edu for help.",
+  "description": "GUI for snafu-py package (though much less extensive). This is the development version, it does not include `nwjs` required to run, nor does it include `snafu-py` scripts (you must download the `snafu-py` package separately and place the `rw` folder in `/py`).  Actually that sounds complicated, why don't you just use the web version at http://alab.psych.wisc.edu/snafu? Or if you really want the desktop version, e-mail me at zemla at wisc dot edu for help.",
   "version": "0.5.0",
   "dependencies": {
     "jquery": "^3.1.1",
@@ -25,12 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jeffzemla/snafu.git"
+    "url": "git+https://github.com/jeffzemla/snafu-gui.git"
   },
   "author": "Jeffrey C. Zemla",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jeffzemla/snafu/issues"
+    "url": "https://github.com/jeffzemla/snafu-gui/issues"
   },
-  "homepage": "https://github.com/jeffzemla/snafu#readme"
+  "homepage": "https://github.com/jeffzemla/snafu-gui#readme"
 }
