--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "window": {
     "frame": true,
     "fullscreen": false,
-    "width": 1120,
-    "height": 670
+    "width": 1100,
+    "height": 900
   },
   "build": {
     "nwVersion": "0.28.0"
@@ -18,7 +18,6 @@
   "version": "0.5.4",
   "dependencies": {
     "concat": "^1.0.0",
-    "jquery": "^3.1.1",
     "python-shell": "^0.3.0"
   },
   "devDependencies": {
@@ -29,6 +28,9 @@
     "url": "git+https://github.com/jeffzemla/snafu-gui.git"
   },
   "author": "Jeffrey C. Zemla",
+  "contributors": [
+    "Kesong Cao"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jeffzemla/snafu-gui/issues"
